[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/platformChar_jump.png" type="Texture" id=1]
[ext_resource path="res://Player/platformChar_idle.png" type="Texture" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.5, 38.25 )

[node name="Player" type="RigidBody2D" groups=["Player"]]
z_index = 1
mode = 2
mass = 1.53061
gravity_scale = 2.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -53 )
scale = Vector2( 1, 1.08333 )
frames = SubResource( 2 )
animation = "idle"

[node name="jumpCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1, -38 )
shape = SubResource( 1 )

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jumpTimer_timeout"]
